# database_windows

./: ._wa.h  CMakeLists.txt  c_boleta.cpp  c_canales_v.cpp  c_canales_v.h  c_catalogo.h  c_catalogo_a.cpp  c_factura.cpp  c_interfaz.h  c_interfaz_a.cpp  c_interfaz_a.h  c_interfaz_v.cpp  c_interfaz_v.h  c_listas.cpp  c_pedidos.cpp  c_pedidos.h  c_producto.cpp  c_producto.h  c_usuario.h  c_v_producto.cpp  c_v_producto.h  c_venta.cpp  catalogo.cpp  clase_boleta.cpp  clase_boleta.h  clase_canales_v.h  clase_catalogo.cpp  clase_factura.cpp  clase_factura.h  clase_interfaz_a.h  clase_interfaz_v.cpp  clase_listas.cpp  clase_listas.h  clase_pedidos.cpp  clase_pedidos.h  clase_pedidosc.cpp  clase_producto.cpp  clase_producto.h  clase_v_producto.h  clase_venta.cpp  (+7 more)
.history/: c_boleta_20231205002707.cpp  c_boleta_20231205142413.cpp  c_boleta_20231205142429.h  c_canales_v_20231205120311.cpp  c_canales_v_20231205142316.cpp  c_canales_v_20231207005511.cpp  c_canales_v_20231207010434.h  c_canales_v_20231207090350.cpp  c_canales_v_20231207090420.cpp  c_canales_v_20231207090432.cpp  c_canales_v_20231207090534.cpp  c_canales_v_20231207090617.cpp  c_catalogo_20231204190523.h  c_catalogo_20231205133207.cpp  c_catalogo_20231205142510.h  c_catalogo_20231205143004.cpp  c_catalogo_20231205151513.cpp  c_catalogo_20231207005606.cpp  c_catalogo_20231207005721.cpp  c_catalogo_20231207083921.cpp  c_catalogo_20231207084321.cpp  c_catalogo_20231207084336.cpp  c_catalogo_20231207084506.cpp  c_catalogo_20231207084526.cpp  c_catalogo_a_20231205143557.h  c_catalogo_a_20231205143727.h  (+944 more)
